Core concepts documented

--- a/hi-framework-docs/v1/Core_Concepts/index.html
+++ b/hi-framework-docs/v1/Core_Concepts/index.html
@@ -49,7 +49,7 @@
             </div>
             <div id="sub-nav-collapse" class="sub-nav-collapse">
                 <!-- Navigation -->
-                <ul class='nav nav-list'><li class=' has-children'><a href="#" class="aj-nav folder"><i class="arrow">&nbsp;</i>Getting started</a><ul class='nav nav-list'><li class=''><a href="../Getting_started/Introduction.html">Introduction</a></li><li class=''><a href="../Getting_started/Application_structure_and_components.html">Application structure and components</a></li><li class=' has-children'><a href="#" class="aj-nav folder"><i class="arrow">&nbsp;</i>The Hello World App</a><ul class='nav nav-list'><li class=''><a href="../Getting_started/The Hello_World_App/Preparing_the_environment.html">Preparing the environment</a></li><li class=''><a href="../Getting_started/The Hello_World_App/Creating_the_Hello_controller_and_world_view.html">Creating the Hello controller and world view</a></li><li class=''><a href="../Getting_started/The Hello_World_App/Creating_the_template.html">Creating the template</a></li><li class=''><a href="../Getting_started/The Hello_World_App/Creating_the_config_file.html">Creating the config file</a></li><li class=''><a href="../Getting_started/The Hello_World_App/Testing_the_app.html">Testing the app</a></li></ul></li><li class=''><a href="../Getting_started/Navigation.html">Navigation</a></li><li class=''><a href="../Getting_started/Frontiers_basics.html">Frontiers basics</a></li></ul></li><li class='open has-children'><a href="../Core_Concepts/index.html" class="folder"><i class="arrow">&nbsp;</i>Core Concepts</a><ul class='nav nav-list'><li class=''><a href="../Core_Concepts/Controllers.html">Controllers</a></li></ul></li><li class=''><a href="../Advanced_Stuff/index.html" class="folder"><i class="arrow">&nbsp;</i>Advanced Stuff</a><ul class='nav nav-list'></ul></li><li class=''><a href="../FAQS/index.html" class="folder"><i class="arrow">&nbsp;</i>FAQS</a><ul class='nav nav-list'></ul></li></ul>
+                <ul class='nav nav-list'><li class=' has-children'><a href="#" class="aj-nav folder"><i class="arrow">&nbsp;</i>Getting started</a><ul class='nav nav-list'><li class=''><a href="../Getting_started/Introduction.html">Introduction</a></li><li class=''><a href="../Getting_started/Application_structure_and_components.html">Application structure and components</a></li><li class=' has-children'><a href="#" class="aj-nav folder"><i class="arrow">&nbsp;</i>The Hello World App</a><ul class='nav nav-list'><li class=''><a href="../Getting_started/The Hello_World_App/Preparing_the_environment.html">Preparing the environment</a></li><li class=''><a href="../Getting_started/The Hello_World_App/Creating_the_Hello_controller_and_world_view.html">Creating the Hello controller and world view</a></li><li class=''><a href="../Getting_started/The Hello_World_App/Creating_the_template.html">Creating the template</a></li><li class=''><a href="../Getting_started/The Hello_World_App/Creating_the_config_file.html">Creating the config file</a></li><li class=''><a href="../Getting_started/The Hello_World_App/Testing_the_app.html">Testing the app</a></li></ul></li><li class=''><a href="../Getting_started/Navigation.html">Navigation</a></li><li class=''><a href="../Getting_started/Frontiers_basics.html">Frontiers basics</a></li></ul></li><li class='open has-children'><a href="../Core_Concepts/index.html" class="folder"><i class="arrow">&nbsp;</i>Core Concepts</a><ul class='nav nav-list'><li class=''><a href="../Core_Concepts/Controllers.html">Controllers</a></li><li class=''><a href="../Core_Concepts/Views.html">Views</a></li><li class=''><a href="../Core_Concepts/Templates.html">Templates</a></li><li class=''><a href="../Core_Concepts/Frontiers.html">Frontiers</a></li></ul></li><li class=''><a href="../Advanced_Stuff/index.html" class="folder"><i class="arrow">&nbsp;</i>Advanced Stuff</a><ul class='nav nav-list'></ul></li><li class=''><a href="../FAQS/index.html" class="folder"><i class="arrow">&nbsp;</i>FAQS</a><ul class='nav nav-list'></ul></li></ul>
 
                 <div class="sidebar-links">
                     
@@ -76,13 +76,13 @@
             <div class="page-header sub-header clearfix">
             <h1>Core Concepts</h1>
             <span style="float: left; font-size: 10px; color: gray;">
-                Tuesday, July 19, 2016            </span>
+                Thursday, July 21, 2016            </span>
             <span style="float: right; font-size: 10px; color: gray;">
-                8:03 PM            </span>
+                1:49 AM            </span>
         </div>
     
     <h3 id="page_Welcome_to_our_Core_Concepts">Welcome to our <strong>Core Concepts</strong></h3>
-<p>Here you will have a understanting of every component in Hi-Framework.
+<p>Here you will have a understanting of the core components of Hi-Framework.
 Everthging explained in the <strong>Getting Started</strong> section will also be explained here but, with more details and complexity.</p>
 <p>If you didn't read the <strong>Getting Started</strong> you may have some big issues here.</p>
 <br/>
@@ -95,7 +95,9 @@ Ready to move on? Press "Next" and dive into Controllers
 -Frontiers
 -FrontEnd
 -i18n
--Basic Configuration(DEV MODE/PRODUCTION MODE)</p>
+-Basic Configuration(DEV MODE/PRODUCTION MODE)
+-RequestContext
+-Hi.redirect and other functions | Ajaxify</p>
 
         <nav>
         <ul class="pager">
