--- a/hi-framework-docs/v1/Core_Concepts/Controllers.html
+++ b/hi-framework-docs/v1/Core_Concepts/Controllers.html
@@ -49,7 +49,7 @@
             </div>
             <div id="sub-nav-collapse" class="sub-nav-collapse">
                 <!-- Navigation -->
-                <ul class='nav nav-list'><li class=' has-children'><a href="#" class="aj-nav folder"><i class="arrow">&nbsp;</i>Getting started</a><ul class='nav nav-list'><li class=''><a href="../Getting_started/Introduction.html">Introduction</a></li><li class=''><a href="../Getting_started/Application_structure_and_components.html">Application structure and components</a></li><li class=' has-children'><a href="#" class="aj-nav folder"><i class="arrow">&nbsp;</i>The Hello World App</a><ul class='nav nav-list'><li class=''><a href="../Getting_started/The Hello_World_App/Preparing_the_environment.html">Preparing the environment</a></li><li class=''><a href="../Getting_started/The Hello_World_App/Creating_the_Hello_controller_and_world_view.html">Creating the Hello controller and world view</a></li><li class=''><a href="../Getting_started/The Hello_World_App/Creating_the_template.html">Creating the template</a></li><li class=''><a href="../Getting_started/The Hello_World_App/Creating_the_config_file.html">Creating the config file</a></li><li class=''><a href="../Getting_started/The Hello_World_App/Testing_the_app.html">Testing the app</a></li></ul></li><li class=''><a href="../Getting_started/Navigation.html">Navigation</a></li><li class=''><a href="../Getting_started/Frontiers_basics.html">Frontiers basics</a></li></ul></li><li class='open has-children'><a href="../Core_Concepts/index.html" class="folder"><i class="arrow">&nbsp;</i>Core Concepts</a><ul class='nav nav-list'><li class='active'><a href="../Core_Concepts/Controllers.html">Controllers</a></li></ul></li><li class=''><a href="../Advanced_Stuff/index.html" class="folder"><i class="arrow">&nbsp;</i>Advanced Stuff</a><ul class='nav nav-list'></ul></li><li class=''><a href="../FAQS/index.html" class="folder"><i class="arrow">&nbsp;</i>FAQS</a><ul class='nav nav-list'></ul></li></ul>
+                <ul class='nav nav-list'><li class=' has-children'><a href="#" class="aj-nav folder"><i class="arrow">&nbsp;</i>Getting started</a><ul class='nav nav-list'><li class=''><a href="../Getting_started/Introduction.html">Introduction</a></li><li class=''><a href="../Getting_started/Application_structure_and_components.html">Application structure and components</a></li><li class=' has-children'><a href="#" class="aj-nav folder"><i class="arrow">&nbsp;</i>The Hello World App</a><ul class='nav nav-list'><li class=''><a href="../Getting_started/The Hello_World_App/Preparing_the_environment.html">Preparing the environment</a></li><li class=''><a href="../Getting_started/The Hello_World_App/Creating_the_Hello_controller_and_world_view.html">Creating the Hello controller and world view</a></li><li class=''><a href="../Getting_started/The Hello_World_App/Creating_the_template.html">Creating the template</a></li><li class=''><a href="../Getting_started/The Hello_World_App/Creating_the_config_file.html">Creating the config file</a></li><li class=''><a href="../Getting_started/The Hello_World_App/Testing_the_app.html">Testing the app</a></li></ul></li><li class=''><a href="../Getting_started/Navigation.html">Navigation</a></li><li class=''><a href="../Getting_started/Frontiers_basics.html">Frontiers basics</a></li></ul></li><li class='open has-children'><a href="../Core_Concepts/index.html" class="folder"><i class="arrow">&nbsp;</i>Core Concepts</a><ul class='nav nav-list'><li class='active'><a href="../Core_Concepts/Controllers.html">Controllers</a></li><li class=''><a href="../Core_Concepts/Views.html">Views</a></li><li class=''><a href="../Core_Concepts/Templates.html">Templates</a></li><li class=''><a href="../Core_Concepts/Frontiers.html">Frontiers</a></li></ul></li><li class=''><a href="../Advanced_Stuff/index.html" class="folder"><i class="arrow">&nbsp;</i>Advanced Stuff</a><ul class='nav nav-list'></ul></li><li class=''><a href="../FAQS/index.html" class="folder"><i class="arrow">&nbsp;</i>FAQS</a><ul class='nav nav-list'></ul></li></ul>
 
                 <div class="sidebar-links">
                     
@@ -76,19 +76,19 @@
             <div class="page-header sub-header clearfix">
             <h1>Controllers</h1>
             <span style="float: left; font-size: 10px; color: gray;">
-                Tuesday, July 19, 2016            </span>
+                Thursday, July 21, 2016            </span>
             <span style="float: right; font-size: 10px; color: gray;">
-                8:40 PM            </span>
+                1:30 AM            </span>
         </div>
     
     <p>By now, you already know controllers.</p>
 <h3 id="page_Definition">Definition</h3>
 <p>Controllers are part of the <strong>MVC-Pattern</strong>.</p>
-<p>In Hi, Controllers are responsible to handle requests made by the browser's URL and decide to call or not a it's views.</p>
+<p>In Hi, Controllers are responsible to handle requests made to it's methods witch are responsible for calling views.</p>
 <p>A controller is a managed bean that extends the <em>mz.co.hi.web.mvc.Controller</em> class. All public methods
-of a controller are considered <strong>actions</strong>, meaning they are accessible via URL.</p>
+of a controller are considered <strong>actions</strong>, meaning that they are accessible via URL.</p>
 <h4 id="page_Actions">Actions</h4>
-<p>Actions are Controller methods. They are responsible for calling the <em>views</em>. They comunicate with your server-resources and pass data to your client-side on demand.</p>
+<p>Actions are Controller methods. They are responsible for calling the <em>views</em>. They comunicate with your server-resources and pass data to your client-side.</p>
 <h3 id="page_The_rules">The rules</h3>
 <ol>
 <li>Controllers classes are <strong>Managed beans</strong>
@@ -98,15 +98,16 @@ of a controller are considered <strong>actions</strong>, meaning they are access
 </ol>
 <h3 id="page_Convetions">Convetions</h3>
 <h4 id="page_Naming_Controllers">Naming Controllers</h4>
-<p>Since Controllers are Java Classes, we recommend you to name them as the best pratices say you should name Java Classes.
-See Examples: Hello, HiWorld, HiTeam</p>
+<p>Controllers are Java Classes and we recommend you to name them as the best pratices recommend us to name Java Classes.</p>
+<p><em>See Examples: Hello, HiWorld</em></p>
 <h4 id="page_Naming_Actions">Naming Actions</h4>
 <ol>
 <li>Methods must follow the camelCase pattern</li>
 <li>No underscore or hyphen will be accepted</li>
 </ol>
+<p><em>See Examples: hi, helloWorld</em></p>
 <h3 id="page_The_Example_Controller">The Example Controller</h3>
-<pre><code class="language-java">package my.controllers; //your controllers's package can have any name
+<pre><code class="language-java">package my.controllers; //your controllers's can be in multiple packages (packages with any name)
 
 import mz.co.hi.web.mvc.Controller;
 import mz.co.hi.web.mvc.exceptions.MvcException;
@@ -129,15 +130,152 @@ public class Example extends Controller {
 }
 
 </code></pre>
-<p>In the snipped above, we have a <strong>Controller</strong> named &quot;Example&quot; and</p>
-<h3 id="page_How_to_pass_data_to_views">How to pass data to views?</h3>
+<p>In the snipped above, we have a <strong>Controller</strong> named &quot;Example&quot; and an action named &quot;myAction&quot;</p>
+<p>You can have as many actions as we need.</p>
+<p>Actions must throw a MvcException.</p>
+<p>The <strong>this.callView()</strong> instruction, tells Hi-Framework to find 2 view files in the directory &quot;examaple&quot; (<em>Controller Name</em>). These files must be <strong>my-action.js</strong> and <strong>my-action.js</strong></p>
+<pre><code>	|-- views
+        |-- example
+            |-- my-action.html
+            |-- my-action.js
+</code></pre>
+<h4 id="page_About_the_naming_convetions_to_view_files_and_directories">About the naming convetions to view files and directories:</h4>
+<ol>
+<li>all must be lowercase</li>
+<li>the case-chages must be replaced by hyphens</li>
+</ol>
+<h3 id="page_How_to_send_data_to_your_views_from_your_actions">How to send data to your views from your actions?</h3>
+<p>Well, that's the question now! <em>How do you send data to views?</em>.</p>
+<p>Actions cant just call views, they must be able to tell the views what data to work with. That's what this topic is about.</p>
+<p>What to know?</p>
+<ol>
+<li>You send data to views, by passing a <strong>java.util.Map</strong> Object to the <strong>callView</strong> method</li>
+<li>The keys in the <strong>java.util.Map</strong> Object you are going to create, will be converted to variables in your view's Scope</li>
+</ol>
+<p>Got it?</p>
+<p>Hope this examaple explains!</p>
+<pre><code class="language-java">package my.controllers; //your controllers's can be in multiple packages (packages with any name)
+
+import mz.co.hi.web.mvc.Controller;
+import mz.co.hi.web.mvc.exceptions.MvcException;
+import java.util.HashMap;
+import java.util.Map;
+
+import javax.enterprise.context.ApplicationScoped;
+
+@ApplicationScoped
+public class Example extends Controller {
+
+
+  
+    public void myAction() throws MvcException{
+	
+		Map dataToSend = new HashMap();
+		dataToSend.put(&quot;message&quot;,&quot;Hi Coders! Iam going to be on a angular variable of my-action Scope!&quot;);
+		dataToSend.put(&quot;number&quot;,23);
+		
+        this.callView(dataToSend);
+
+    }
+
+
+
+}
+
+</code></pre>
+<h3 id="page_my_actionhtml">my-action.html</h3>
+<p>In the views, you should display the data as Angular JS template engine teachs you. Feel free to use it as you like</p>
+<pre><code class="language-html">&lt;div&gt;
+	&lt;h1&gt;The message is {{message}} and the number is &lt;b&gt;{{number}}&lt;/b&gt;&lt;/h1&gt;
+&lt;/div&gt;
+</code></pre>
+<h3 id="page_my_actionjs">my-action.js</h3>
+<p>We will automatically create two variables here. <strong>$scope.message</strong> and <strong>$scope.number</strong></p>
+<pre><code class="language-javascript">Hi.view(function($scope){
+	
+	$scope.$postLoad = function(){
+			
+			alert($scope.number+&quot; &quot;+$scope.message);
+	
+	}
+
+});
+</code></pre>
+<p><strong>NOTE:</strong> The $postLoad function comes with Hi-Framework, along with others. $postLoad is executed as soon as the view markup is fully loaded</p>
 <h3 id="page_How_to_get_passed_data_from_params">How to get passed data from params?</h3>
+<p>This is one of the easiest things to do.</p>
+<p>As you may noticed by now, Frontiers can return any kind of data to client-side. and it also receives data of any kind from client-side(as params).</p>
+<p>Controllers are different, they work with Map Objects. <em>Map-in</em> and <em>Map-out</em></p>
+<p>Actions(Controller methods), only receive one param. A <strong>java.util.Map</strong> Object. That object will contain the value of params</p>
+<p>Wait... Let me make something clear first.</p>
+<p><strong>Hi Framework only works with query-strings for URL params</strong></p>
+<p>Now you may undestand the use of maps.</p>
+<p>Take this url for instance: <em>http://localhost:8080/MyApp/example/my-action?name=Greetings&amp;details=Hello</em></p>
+<pre><code class="language-java">
+    public void myAction(Map params) throws MvcException{
+	
+		
+		Map dataToSend = new HashMap();
+		dataToSend.put(&quot;message&quot;,params.get(&quot;name&quot;)); //Now we are setting &quot;Greetings&quot; as our message
+		dataToSend.put(&quot;number&quot;,23);
+		
+        this.callView(dataToSend);
+
+    }
+
+
+</code></pre>
 <h3 id="page_How_to_send_data_to_template">How to send data to template?</h3>
-<p>-Injecting FrontEnd;</p>
+<p>Hi Framework has a way for you to manipulate your client-side state from the server-side.
+This manipulation can be done using the class <em>import mz.co.hi.web.FrontEnd</em></p>
+<h4 id="page_Injecting_FrontEnd">Injecting FrontEnd</h4>
+<p>In order to use the FrontEnd class, we need to Inject it to our Controller(or Frontier) using the <strong>@Inject</strong> annotation from CDI.</p>
+<pre><code class="language-java">package my.controllers; //your controllers's can be in multiple packages (packages with any name)
+
+import mz.co.hi.web.mvc.Controller;
+import mz.co.hi.web.mvc.exceptions.MvcException;
+import mz.co.hi.web.FrontEnd;
+
+import javax.enterprise.context.ApplicationScoped;
+import javax.inject.Inject;
+
+@Inject
+FrontEnd frontEnd;
+
+@ApplicationScoped
+public class Example extends Controller {
+
+
+    public void myAction() throws MvcException{
+
+        this.callView();
+
+    }
+
+
+
+}
+
+</code></pre>
+<p>After Injecting the FrontEnd class, you are free to explore all of it's methods. But for now let's see how we can pass data to the template</p>
+<pre><code class="language-java">
+    public void myAction(Map params) throws MvcException{
+	
+		Map templateData = new HashMap();
+		templateData.put(&quot;message&quot;, &quot;Iam going to the template!&quot;);
+		frontEnd.setTemplateData(templateData);
+		
+        this.callView();
+
+    }
+
+
+</code></pre>
+<p>In the template you must use the variables as they are used in views. same logic. If you have troubles with this, read more about &quot;templates&quot; in the next sections.</p>
 
         <nav>
         <ul class="pager">
-            <li><a href="../Core_Concepts/index.html">Previous</a></li>            <li><a href="../Advanced_Stuff/index.html">Next</a></li>        </ul>
+            <li><a href="../Core_Concepts/index.html">Previous</a></li>            <li><a href="../Core_Concepts/Views.html">Next</a></li>        </ul>
     </nav>
     </article>
 
